fix(Box): Swapped over to using flex-gap instead of margin hack

--- a/src/Box/Box.css
+++ b/src/Box/Box.css
@@ -174,39 +174,16 @@
 .Box--flex-vertical.Box--flex-align-vert-around  { justify-content: space-around; }
 .Box--flex-vertical.Box--flex-align-vert-between { justify-content: space-between; }
 
-.Box--flex-vertical.Box--flex-gap-x1 > .Box { margin-top: calc(var(--size--x1) * 0.5); margin-bottom: calc(var(--size--x1) * 0.5); }
-.Box--flex-vertical.Box--flex-gap-x2 > .Box { margin-top: calc(var(--size--x2) * 0.5); margin-bottom: calc(var(--size--x2) * 0.5); }
-.Box--flex-vertical.Box--flex-gap-x3 > .Box { margin-top: calc(var(--size--x3) * 0.5); margin-bottom: calc(var(--size--x3) * 0.5); }
-.Box--flex-vertical.Box--flex-gap-x4 > .Box { margin-top: calc(var(--size--x4) * 0.5); margin-bottom: calc(var(--size--x4) * 0.5); }
-.Box--flex-vertical.Box--flex-gap-x5 > .Box { margin-top: calc(var(--size--x5) * 0.5); margin-bottom: calc(var(--size--x5) * 0.5); }
-.Box--flex-vertical.Box--flex-gap-x6 > .Box { margin-top: calc(var(--size--x6) * 0.5); margin-bottom: calc(var(--size--x6) * 0.5); }
-.Box--flex-vertical.Box--flex-gap-x8 > .Box { margin-top: calc(var(--size--x8) * 0.5); margin-bottom: calc(var(--size--x8) * 0.5); }
-.Box--flex-vertical.Box--flex-gap-x10 > .Box { margin-top: calc(var(--size--x10) * 0.5); margin-bottom: calc(var(--size--x10) * 0.5); }
-.Box--flex-vertical.Box--flex-gap-x12 > .Box { margin-top: calc(var(--size--x12) * 0.5); margin-bottom: calc(var(--size--x12) * 0.5); }
-.Box--flex-vertical.Box--flex-gap-x16 > .Box { margin-top: calc(var(--size--x16) * 0.5); margin-bottom: calc(var(--size--x16) * 0.5); }
-
-.Box--flex-horizontal.Box--flex-gap-x1 > .Box { margin-right: calc(var(--size--x1) * 0.5); margin-left: calc(var(--size--x1) * 0.5); }
-.Box--flex-horizontal.Box--flex-gap-x2 > .Box { margin-right: calc(var(--size--x2) * 0.5); margin-left: calc(var(--size--x2) * 0.5); }
-.Box--flex-horizontal.Box--flex-gap-x3 > .Box { margin-right: calc(var(--size--x3) * 0.5); margin-left: calc(var(--size--x3) * 0.5); }
-.Box--flex-horizontal.Box--flex-gap-x4 > .Box { margin-right: calc(var(--size--x4) * 0.5); margin-left: calc(var(--size--x4) * 0.5); }
-.Box--flex-horizontal.Box--flex-gap-x5 > .Box { margin-right: calc(var(--size--x5) * 0.5); margin-left: calc(var(--size--x5) * 0.5); }
-.Box--flex-horizontal.Box--flex-gap-x6 > .Box { margin-right: calc(var(--size--x6) * 0.5); margin-left: calc(var(--size--x6) * 0.5); }
-.Box--flex-horizontal.Box--flex-gap-x8 > .Box { margin-right: calc(var(--size--x8) * 0.5); margin-left: calc(var(--size--x8) * 0.5); }
-.Box--flex-horizontal.Box--flex-gap-x10 > .Box { margin-right: calc(var(--size--x10) * 0.5); margin-left: calc(var(--size--x10) * 0.5); }
-.Box--flex-horizontal.Box--flex-gap-x12 > .Box { margin-right: calc(var(--size--x12) * 0.5); margin-left: calc(var(--size--x12) * 0.5); }
-.Box--flex-horizontal.Box--flex-gap-x16 > .Box { margin-right: calc(var(--size--x16) * 0.5); margin-left: calc(var(--size--x16) * 0.5); }
-
-.Box--flex-gapped.Box--flex-vertical:not(.Box--flex-reverse) > .Box:first-child { margin-top: 0; }
-.Box--flex-gapped.Box--flex-vertical:not(.Box--flex-reverse) > .Box:last-child { margin-bottom: 0; }
-
-.Box--flex-gapped.Box--flex-vertical.Box--flex-reverse. > .Box:first-child { margin-bottom: 0; }
-.Box--flex-gapped.Box--flex-vertical.Box--flex-reverse. > .Box:last-child { margin-top: 0; }
-
-.Box--flex-gapped.Box--flex-horizontal:not(.Box--flex-reverse) > .Box:first-child { margin-left: 0; }
-.Box--flex-gapped.Box--flex-horizontal:not(.Box--flex-reverse) > .Box:last-child { margin-right: 0; }
-
-.Box--flex-gapped.Box--flex-horizontal.Box--flex-reverse > .Box:first-child { margin-right: 0; }
-.Box--flex-gapped.Box--flex-horizontal.Box--flex-reverse > .Box:last-child { margin-left: 0; }
+.Box--flex-gap-x1 { gap: var(--size--x1); }
+.Box--flex-gap-x2 { gap: var(--size--x2); }
+.Box--flex-gap-x3 { gap: var(--size--x3); }
+.Box--flex-gap-x4 { gap: var(--size--x4); }
+.Box--flex-gap-x5 { gap: var(--size--x5); }
+.Box--flex-gap-x6 { gap: var(--size--x6); }
+.Box--flex-gap-x8 { gap: var(--size--x8); }
+.Box--flex-gap-x10 { gap: var(--size--x10); }
+.Box--flex-gap-x12 { gap: var(--size--x12); }
+.Box--flex-gap-x16 { gap: var(--size--x16); }
 
 /**********
  * Colors *
